[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stpyvista"
version = "0.0.14"
authors = [
  { name="Edwin Saavedra C.", email="esaavedrac@u.northwestern.edu" },
]
description = "Streamlit component to render pyvista 3D visualizations"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "streamlit",
    "pyvista",
    "bokeh",
    "panel"
]

[project.urls]
"Homepage" = "https://github.com/edsaac/stpyvista"
"Bug Tracker" = "https://github.com/edsaac/stpyvista/issues"
"Examples" = "https://stpyvista.streamlit.app/"